<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_dimen"
        android:background="@android:color/white"
        android:elevation="@dimen/cardview_default_elevation"
        android:orientation="horizontal"
        android:padding="@dimen/layout_margin_dimen">

        <TextView
            android:id="@+id/text_view_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/steps_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v7.widget.RecyclerView>
</LinearLayout>
