<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:fitsSystemWindows="true"
                  android:orientation="vertical"
                  android:padding="@dimen/layout_margin_dimen">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/simple_player_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"/>

        <ImageView
            android:id="@+id/thumbImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:elevation="1dp"
            android:paddingRight="15dp"/>

        <TextView
            android:id="@+id/recipe_step_detail_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="@dimen/layout_margin_dimen"
            android:textColor="@color/recipe_detail_text_color"
            android:textSize="20sp"
            android:textStyle="normal"
            tools:text="Add Something to make cake."/>

    </LinearLayout>
</ScrollView>